Started on Rush bot

--- a/.gitignore
+++ b/.gitignore
@@ -20,8 +20,13 @@ build/*
 *.ipr
 *.iws
 /.idea/
+
 #ignoring battlecode version number
 version.txt
+
+#ignoring run cofig file
+gradle.properties
+
 # User-specific stuff:
 battlecode-scaffold.iws
 
