--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 # modify this file to change project properties
-teamA=examplefuncsplayer
-teamB=examplefuncsplayer
+teamA=mouse
+teamB=mouse
 maps=maptestsmall
 source=src
 gpr.user=battlecodedownloadpackage
