added more debug tools

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 # modify this file to change project properties
-teamA=mouse
-teamB=mouse
-maps=maptestsmall
+teamA=droideka
+teamB=droideka
+maps=ALandDivided
 source=src
 gpr.user=battlecodedownloadpackage
