added fun things and a new bot

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 # modify this file to change project properties
 teamA=droideka
-teamB=droideka
+teamB=empire
 maps=ALandDivided
 source=src
 gpr.user=battlecodedownloadpackage
