--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 # modify this file to change project properties
-teamA=droideka
-teamB=empire
+teamA=commando
+teamB=c3po
 maps=ALandDivided
 source=src
 gpr.user=battlecodedownloadpackage
