updated so we can use profiling

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,7 @@
 # modify this file to change project properties
 teamA=commando
 teamB=c3po
-maps=ALandDivided
+maps=ChristmasInJuly
 source=src
 gpr.user=battlecodedownloadpackage
+profilerEnabled=false
