--- a/build.gradle
+++ b/build.gradle
@@ -10,8 +10,8 @@ apply plugin: 'idea'
 apply plugin: 'eclipse'
 
 ext.versions = [
-    battlecode: new File(projectDir, "version.txt").text
-    //scala: '2.11.7'
+        battlecode: new File(projectDir, "version.txt").text.trim()
+        //scala: '2.11.7'
 ]
 
 // TODO: DELETE CREDENTIALS AFTER PUBLIC RELEASE
@@ -79,8 +79,8 @@ configurations {
 // Download a different version of the client depending on the local OS.
 def os = System.getProperty("os.name").toLowerCase()
 def clientName = os.startsWith('windows') ? 'battlecode-client-win' :
-                 os.startsWith('mac') ? 'battlecode-client-mac' :
-                 'battlecode-client-linux'
+        os.startsWith('mac') ? 'battlecode-client-mac' :
+                'battlecode-client-linux'
 
 // The dependencies of this project.
 dependencies {
@@ -125,7 +125,7 @@ task version {
 task screamForUpdate() {
     group 'battlecode'
     doLast {
-        if (versions.battlecode != new URL("https://2020.battlecode.org/version.txt").text) print("\n\n\n\n\n\n\tNEW VERSION AVAILABLE\n\trun ./gradlew update to download \n\n\n\n")
+        if (versions.battlecode != new URL("https://2020.battlecode.org/version.txt").text.trim()) print("\n\n\n\n\n\n\tNEW VERSION AVAILABLE\n\trun ./gradlew update to download \n\n\n\n")
     }
 }
 
@@ -135,7 +135,7 @@ task update {
     group 'battlecode'
     doLast {
         //overwrites stored version number
-        new File(projectDir, "version.txt").text = new URL("https://2020.battlecode.org/version.txt").text
+        new File(projectDir, "version.txt").text = new URL("https://2020.battlecode.org/version.txt").text.trim()
 
         //overwrites cached version number
         versions.battlecode = new File(projectDir, "version.txt").text
@@ -181,16 +181,17 @@ task run(type: JavaExec, dependsOn: 'build') {
     classpath = sourceSets.main.runtimeClasspath
     args = ['-c=-']
     jvmArgs = [
-        '-Dbc.server.mode=headless',
-        '-Dbc.server.map-path=maps',
-        '-Dbc.server.debug=true',
-        '-Dbc.engine.debug-methods=true',
-        '-Dbc.game.team-a='+project.property('teamA'),
-        '-Dbc.game.team-b='+project.property('teamB'),
-        '-Dbc.game.team-a.url='+project.property('classLocation'),
-        '-Dbc.game.team-b.url='+project.property('classLocation'),
-        '-Dbc.game.maps='+project.property('maps'),
-        '-Dbc.server.save-file=' +project.property('replay')
+            '-Dbc.server.mode=headless',
+            '-Dbc.server.map-path=maps',
+            '-Dbc.server.debug=true',
+            '-Dbc.engine.debug-methods=true',
+            '-Dbc.engine.enable-profiler='+project.property('profilerEnabled'),
+            '-Dbc.game.team-a='+project.property('teamA'),
+            '-Dbc.game.team-b='+project.property('teamB'),
+            '-Dbc.game.team-a.url='+project.property('classLocation'),
+            '-Dbc.game.team-b.url='+project.property('classLocation'),
+            '-Dbc.game.maps='+project.property('maps'),
+            '-Dbc.server.save-file=' +project.property('replay')
     ]
 }
 task runFromClient(type: JavaExec, dependsOn: 'build') {
@@ -204,6 +205,7 @@ task runFromClient(type: JavaExec, dependsOn: 'build') {
             '-Dbc.server.debug=false',
             '-Dbc.server.robot-player-to-system-out=false',
             '-Dbc.engine.debug-methods=true',
+            '-Dbc.engine.enable-profiler='+project.property('profilerEnabled'),
             '-Dbc.game.team-a='+project.property('teamA'),
             '-Dbc.game.team-b='+project.property('teamB'),
             '-Dbc.game.team-a.url='+project.property('classLocation'),
@@ -224,6 +226,7 @@ task runDebug(type: JavaExec, dependsOn: 'build') {
             '-Dbc.server.debug=false',
             '-Dbc.server.robot-player-to-system-out=true',
             '-Dbc.engine.debug-methods=true',
+            '-Dbc.engine.enable-profiler='+project.property('profilerEnabled'),
             '-Dbc.game.team-a='+project.property('teamA'),
             '-Dbc.game.team-b='+project.property('teamB'),
             '-Dbc.game.team-a.url='+project.property('classLocation'),
@@ -243,8 +246,8 @@ task listPlayers {
         sourceSets.main.allSource.each {
             println it.name
             if (it.getName().equals('RobotPlayer.java')
-                //|| it.getName().equals('RobotPlayer.scala')
-                ) {
+            //|| it.getName().equals('RobotPlayer.scala')
+            ) {
                 URI base = new File(project.projectDir, 'src').toURI()
                 URI full = it.toURI()
                 String path = base.relativize(full).toString()
@@ -311,6 +314,12 @@ task unpackClient32(type: Copy, dependsOn: configurations.client32) {
         }
     }
     into 'client32/'
+}
+
+task buildMap(type: JavaExec, dependsOn: 'build') {
+    group 'battlecode'
+    main = 'maps.' + project.property('buildMap')
+    classpath = project.sourceSets.main.runtimeClasspath
 }
 
 unpackClient32.onlyIf { arch32 }
