probe droids now take enemy units to water

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 # modify this file to change project properties
 teamA=commando
-teamB=c3po
-maps=ChristmasInJuly
+teamB=mouse
+maps=ALandDivided
 source=src
 gpr.user=battlecodedownloadpackage
 profilerEnabled=false
